# ndex_sol

./: CMakeLists.txt  README.md
config/: ndengine.local.json
include/nde/: AppConfig.hpp  AuditLog.hpp  ComputeProfile.hpp  DashboardClient.hpp  Engine.hpp  ResourceScheduler.hpp  SafeWalletAdapter.hpp  SolanaClient.hpp  Task.hpp
src/: AppConfig.cpp  AuditLog.cpp  ComputeProfile.cpp  DashboardClient.cpp  Engine.cpp  ResourceScheduler.cpp  SafeWalletAdapter.cpp  SolanaClient.cpp  Task.cpp  main.cpp
